--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/taj-store.commonjs2.js",
-  "types": "build/ts/index.d.ts",
+  "types": "dist/ts/index.d.ts",
   "directories": {
     "test": "tests"
   },
