--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
   "directories": {
     "test": "tests"
   },
-  "dependencies": {
-    "jsdom": "^16.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/jsdom": "^16.2.4",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
