--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "taj-test",
-  "version": "1.0.0",
+  "name": "mahal-test-utils",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/taj-test.js",
   "types": "dist/ts/index.d.ts",
