--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "mahal-test-utils",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "Test plugin for mahal framework.",
   "main": "dist/taj-test.js",
   "types": "dist/ts/index.d.ts",
   "directories": {
     "test": "tests"
   },
-  "dependencies": {},
+  "scripts": {
+    "install:lib": "npm i ../mahal/mahal-0.14.0.tgz --no-save",
+    "build": "npm run webpack:dev",
+    "build:pack": "npm run build && npm pack",
+    "test": "cd tests && npm run install:test",
+    "build:test": "npm run build:pack && npm run test",
+    "webpack:dev": "webpack --config webpack/webpack.config.js",
+    "webpack:prod": "webpack --config webpack/webpack.prod.config.js"
+  },
+  "dependencies": {
+    "mahal-html-compiler": "^1.0.0"
+  },
+  "peerDependencies": {
+    "mahal": "^1.0.0"
+  },
   "devDependencies": {
+    "mahal": "^1.0.0",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
@@ -16,13 +31,6 @@
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.3",
     "webpack-node-externals": "^2.5.2"
-  },
-  "scripts": {
-    "install:lib": "npm i ../mahal/mahal-0.14.0.tgz --no-save",
-    "build": "npm run webpack:dev",
-    "build:pack": "npm run build && npm pack",
-    "webpack:dev": "webpack --config webpack/webpack.config.js",
-    "webpack:prod": "webpack --config webpack/webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
