--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mahal-test-utils",
   "version": "1.0.0",
   "description": "Test plugin for mahal framework.",
-  "main": "dist/taj-test.js",
+  "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
   "directories": {
     "test": "tests"
@@ -14,7 +14,8 @@
     "test": "cd tests && npm run install:test",
     "build:test": "npm run build:pack && npm run test",
     "webpack:dev": "webpack --config webpack/webpack.config.js",
-    "webpack:prod": "webpack --config webpack/webpack.prod.config.js"
+    "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
+    "build:ci": "npm run build:test"
   },
   "dependencies": {
     "mahal-html-compiler": "^1.0.0"
@@ -23,6 +24,7 @@
     "mahal": "^1.0.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^6.1.1",
     "mahal": "^1.0.0",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
@@ -34,12 +36,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ujjwalguptaofficial/taj-store.git"
+    "url": "git+https://github.com/ujjwalguptaofficial/mahal-test-utils.git"
   },
-  "author": "",
+  "author": "Ujjwal Gupta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ujjwalguptaofficial/taj-store/issues"
+    "url": "https://github.com/ujjwalguptaofficial/mahal-test-utils/issues"
   },
-  "homepage": "https://github.com/ujjwalguptaofficial/taj-store#readme"
+  "homepage": "https://github.com/ujjwalguptaofficial/mahal-test-utils#readme"
 }
