--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mahal-test-utils",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Test plugin for mahal framework.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -16,13 +16,14 @@
     "webpack:dev": "webpack --config webpack/webpack.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
     "build:ci": "npm run build:test",
-    "deploy": "npm run build:ci"
+    "deploy": "npm run build:ci",
+    "prepublishOnly": "npm run deploy"
   },
   "dependencies": {
-    "mahal-html-compiler": "^1.0.0"
+    "mahal-html-compiler": "^1.1.0"
   },
   "peerDependencies": {
-    "mahal": "^1.0.0"
+    "mahal": "^1.1.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
