--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "mahal-test-utils",
-  "version": "1.1.0",
-  "description": "Test plugin for mahal framework.",
+  "version": "1.1.1",
+  "description": "Official test plugin for mahal framework.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
     "install:lib": "npm i ../mahal/mahal-0.14.0.tgz --no-save",
     "build": "npm run webpack:dev",
@@ -16,17 +13,19 @@
     "webpack:dev": "webpack --config webpack/webpack.config.js",
     "webpack:prod": "webpack --config webpack/webpack.prod.config.js",
     "build:ci": "npm run build:test",
-    "deploy": "npm run build:ci",
+    "clean": "del dist",
+    "deploy": "npm run clean && npm run build:ci",
     "prepublishOnly": "npm run deploy"
   },
   "dependencies": {
-    "mahal-html-compiler": "^1.1.0"
+    "mahal-html-compiler": "^1.1.1"
   },
   "peerDependencies": {
-    "mahal": "^1.1.0"
+    "mahal": "^1.1.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
+    "del-cli": "^4.0.1",
     "mahal": "^1.0.0",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
