--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mahal-test-utils",
-  "version": "1.4.1",
+  "name": "@mahaljs/test-utils",
+  "version": "1.4.2",
   "description": "Official test plugin for mahal framework.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -15,18 +15,19 @@
     "build:ci": "npm run build:test",
     "clean": "del dist",
     "deploy": "npm run clean && npm run build:ci",
-    "prepublishOnly": "npm run deploy"
+    "install:latest": "npm i mahal@latest && npm i @mahaljs/html-compiler@latest",
+    "prepublishOnly": "npm run install:latest && npm run deploy"
   },
   "dependencies": {
-    "mahal-html-compiler": "^1.4.1"
+    "@mahaljs/html-compiler": "^1.4.2"
   },
   "peerDependencies": {
-    "mahal": "^1.4.1"
+    "mahal": "^1.4.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
     "del-cli": "^4.0.1",
-    "mahal": "^1.4.0",
+    "mahal": "^1.4.1",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
