--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@mahaljs/test-utils",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Official test plugin for mahal framework.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
+  "keywords": [
+    "mahal",
+    "test",
+    "test-util",
+    "ui",
+    "framework"
+  ],
   "scripts": {
     "install:lib": "npm i ../mahal/mahal-1.4.0.tgz --no-save",
     "build": "npm run webpack:dev",
@@ -19,7 +26,8 @@
     "prepublishOnly": "npm run install:latest && npm run deploy"
   },
   "dependencies": {
-    "@mahaljs/html-compiler": "^1.4.2"
+    "@mahaljs/html-compiler": "^1.4.3",
+    "@mahaljs/util": "^1.4.3"
   },
   "peerDependencies": {
     "mahal": "^1.4.2"
@@ -27,7 +35,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.1",
     "del-cli": "^4.0.1",
-    "mahal": "^1.4.1",
+    "mahal": "^1.4.2",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
