--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mahaljs/test-utils",
-  "version": "1.7.1",
+  "version": "1.8.1",
   "description": "Official test plugin for mahal framework.",
   "main": "dist/npm.export.js",
   "types": "dist/ts/index.d.ts",
@@ -26,16 +26,16 @@
     "prepublishOnly": "npm run install:latest && npm run deploy"
   },
   "dependencies": {
-    "@mahaljs/html-compiler": "^1.7.1"
+    "@mahaljs/html-compiler": "^1.8.1"
   },
   "peerDependencies": {
-    "mahal": "^1.7.1"
+    "mahal": "^1.8.1"
   },
   "devDependencies": {
-    "@mahaljs/util": "^1.7.1",
+    "@mahaljs/util": "^1.8.0",
     "copy-webpack-plugin": "^6.1.1",
     "del-cli": "^4.0.1",
-    "mahal": "^1.7.1-beta",
+    "mahal": "^1.8.0",
     "smart-banner-webpack-plugin": "^3.0.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
